package com.zsx.design.pattern.structural.adapter;


public interface Target {
    String demand();

}
